change canonical url

--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html lang="en" prefix="op: http://media.facebook.com/op#">
   <head>
     <meta charset="utf-8">
-    <link rel="canonical" href="https://fahmi-armand.github.io">
+    <link rel="canonical" href="https://fahmi-armand.github.io/github-io/">
     <link rel="stylesheet" title="default" href="#">
     <title>Instant Articles</title>
     <meta property="fb:article_style" content="Test Article Style">
